--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -60,7 +60,7 @@ Web tools:
 Calendar and readings
 ==============================================================
 
-Mon Oct  5 2020: Introduction
+Mon Oct  5 2020: [Introduction](slides/1-introduction.pdf)
   - *Read*: [This World of Ours](https://www.usenix.org/system/files/1401_08-12_mickens.pdf) by James Mickens
   - *Watch*: [USENIX Security 2018 Keynote](https://www.usenix.org/conference/usenixsecurity18/presentation/mickens) by James Mickens
 
