--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -77,6 +77,7 @@ Wed Oct  7 2020: Buffer overflow attacks
   - *Resources mentioned in class:* [Project Zero exploits](https://googleprojectzero.blogspot.com/2020/07/mms-exploit-part-1-introduction-to-qmage.html), [finger daemon](https://minnie.tuhs.org/cgi-bin/utree.pl?file=4.3BSD/usr/src/etc/fingerd.c), [GEF](https://gef.readthedocs.io/en/master/), [Compiler explorer](https://godbolt.org/z/3iFhjy)
 
 Mon Oct 12 2020: Buffer overflow defenses
+  - [*Slides*](slides/3-lowlevelmitigations.pdf)
   - *Read*: [ASLR](https://pax.grsecurity.net/docs/aslr.txt) and [NOEXEC](https://pax.grsecurity.net/docs/noexec.txt)
 
 Tue Oct 13 2020: PA2: Buffer overflows
