--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -80,7 +80,7 @@ Mon Oct 12 2020: Buffer overflow defenses
   - [*Slides*](slides/3-lowlevelmitigations.pdf)
   - *Read*: [ASLR](https://pax.grsecurity.net/docs/aslr.txt) and [NOEXEC](https://pax.grsecurity.net/docs/noexec.txt)
 
-Tue Oct 13 2020: PA2: Buffer overflows
+Tue Oct 13 2020: [PA2: Buffer overflows](pa/pa2.html)
 
 Wed Oct 14 2020: Memory (un)safety
   - *Read*: [Low-Level Software Security by Example](papers/erlingsson:low.pdf) by Ulfar Erlingsson et al.
