--- a/pa/pa2.html
+++ b/pa/pa2.html
@@ -1,4 +1,5 @@
-# Assignment 2 *75 pts + 25pts extra for sploit4*
+<meta charset="utf-8"><!-- -*- markdown -*- -->
+    **PA 2: Buffer overflows (75 pts + 25pts extra for sploit4)**
 
 **Early Turn-In: Wednesday, October 21, 2020 by 11:59:59 PM (10% bonus)**
 
@@ -125,3 +126,10 @@ resources.
 4. If you work in teams, only one of you need to submit your code to gradescope. After submission, you can find the `Add Group Member` button to add your teammate.
 
 Note: The autograder will only check whether your sploits can be compiled successfully. The score is only a reference for you to see if you pass all compilation test easily. In the meanwhile, you'll know your answer is correct if you followed the instructions above and you were able to get a root shell. The `actual score` for this assignment will be posted when we are done with grading and you will be notified.
+
+
+<style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="../markdeep.min.js"></script>
+<script>
+  window.alreadyProcessedMarkdeep || (document.body.style.visibility="visible");
+  markdeepOptions= {tocStyle: 'long', sortScheduleLists: false };
+</script>
