Removed teams for pa2

--- a/cse127-fall20/pa/pa2.html
+++ b/cse127-fall20/pa/pa2.html
@@ -5,7 +5,7 @@
 
 **Hard Deadline: Friday, October 23, 2020 by 11:59:59 PM Pacific Time**
 
-The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs. You are allowed to work in teams for this assignment.
+The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs.
 
 **sploit1-sploit3 are required. sploit4 is extra credit!**
 
@@ -123,7 +123,6 @@ resources.
 1. Create a file named `PID` in the student home directory on the VM, and put your PID in it (ex: `A12345678`)
 2. Run the following command from the student home directory `tar -czvf pa2.tar.gz PID sploit[1-4]/ targets/` This will create a `pa2.tar.gz` in the home directory with all your files in it. You can see what files were zipped by running `tar -tf pa2.tar.gz`
 3. `scp` the `pa2.tar.gz` file to your local computer and submit to gradescope.
-4. If you work in teams, only one of you need to submit your code to gradescope. After submission, you can find the `Add Group Member` button to add your teammate.
 
 Note: The autograder will only check whether your sploits can be compiled successfully. The score is only a reference for you to see if you pass all compilation test easily. In the meanwhile, you'll know your answer is correct if you followed the instructions above and you were able to get a root shell. The `actual score` for this assignment will be posted when we are done with grading and you will be notified.
 
