--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ Mon Oct 12 2020: Buffer overflow defenses
 Tue Oct 13 2020: [PA2: Buffer overflows](pa/pa2.html)
 
 Wed Oct 14 2020: Memory (un)safety
+  - [*Slides*](slides/4-ropcfi.pdf)
   - *Read*: [Low-Level Software Security by Example](papers/erlingsson:low.pdf) by Ulfar Erlingsson et al.
   - *Optional*: [The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)](papers/shacham:rop.pdf) by Hovav Shacham and [Control-Flow Integrity](papers/abadi:cfi.pdf) by Martin Abadi et al.
 
