--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@ Tue Oct 13 2020: [PA2: Buffer overflows](pa/pa2.html)
 Wed Oct 14 2020: Memory (un)safety
   - [*Slides*](slides/4-ropcfi.pdf)
   - *Read*: [Low-Level Software Security by Example](papers/erlingsson:low.pdf) by Ulfar Erlingsson et al.
-  - *Optional*: [The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)](papers/shacham:rop.pdf) by Hovav Shacham and [Control-Flow Integrity](papers/abadi:cfi.pdf) by Martin Abadi et al.
+  - *Optional*: [The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)](papers/shacham:rop.pdf) by Hovav Shacham, [Hacking Blind](papers/bittau:brop.pdf) by Andrea Bittau et al.,  and [Control-Flow Integrity](papers/abadi:cfi.pdf) by Martin Abadi et al.
 
 Mon Oct 19 2020: More memory (un)safety
-  - *Optional*: [Hacking Blind](papers/bittau:brop.pdf) by Andrea Bittau et al.
+  - *Read*: [Understanding glibc malloc](https://sploitfun.wordpress.com/2015/02/10/understanding-glibc-malloc/) by sploitfun
+  - *Optional*: [Advanced Doug lea's malloc exploits](http://phrack.org/issues/61/6.html) by jp
 
 Wed Oct 21 2020: Sandboxing and isolation
   - *Read*: [The Road to Less Trusted Code: Lowering the Barrier to In-process Sandboxing](https://cseweb.ucsd.edu/~dstefan/noindex/login2020/) by Garfinkel et al.
