--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -97,7 +97,7 @@ Wed Oct 21 2020: Sandboxing and isolation
 
 Thu Oct 22 2020: PA3: Sandboxing
 
-Mon Oct 26 2020: Bugfinding (with guest: [Fraser Brown](https://web.stanford.edu/~mlfbrown/))
+Mon Oct 26 2020: Bugfinding (with [Fraser](https://web.stanford.edu/~mlfbrown/))
   - *Read*: [A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World](papers/bessey:a-few.pdf) by Al Bessey et al.
 
 Wed Oct 28 2020: Side channels (with [Sunjay](https://www.sysnet.ucsd.edu/~scauligi/))
