--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@ Wed Oct 14 2020: Memory (un)safety
   - *Optional*: [The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)](papers/shacham:rop.pdf) by Hovav Shacham, [Hacking Blind](papers/bittau:brop.pdf) by Andrea Bittau et al.,  and [Control-Flow Integrity](papers/abadi:cfi.pdf) by Martin Abadi et al.
 
 Mon Oct 19 2020: More memory (un)safety
+  - [*Slides*](slides/5-heapint.pdf), [*Example code*](notes/heap)
   - *Read*: [Understanding glibc malloc](https://sploitfun.wordpress.com/2015/02/10/understanding-glibc-malloc/) by sploitfun
-  - *Optional*: [Advanced Doug lea's malloc exploits](http://phrack.org/issues/61/6.html) by jp
+  - *Optional*: [Advanced Doug lea's malloc exploits](http://phrack.org/issues/61/6.html) by jp, [Automatic Techniques to Systematically Discover New Heap Exploitation Primitives](https://www.usenix.org/conference/usenixsecurity20/presentation/yun) by Insu Yun et al.
 
 Wed Oct 21 2020: Sandboxing and isolation
   - *Read*: [The Road to Less Trusted Code: Lowering the Barrier to In-process Sandboxing](https://cseweb.ucsd.edu/~dstefan/noindex/login2020/) by Garfinkel et al.
@@ -97,10 +98,10 @@ Wed Oct 21 2020: Sandboxing and isolation
 
 Thu Oct 22 2020: PA3: Sandboxing
 
-Mon Oct 26 2020: Bugfinding (with [Fraser](https://web.stanford.edu/~mlfbrown/))
+Mon Oct 26 2020: Bugfinding (with [Fraser](https://web.stanford.edu/~mlfbrown/) )
   - *Read*: [A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World](papers/bessey:a-few.pdf) by Al Bessey et al.
 
-Wed Oct 28 2020: Side channels (with [Sunjay](https://www.sysnet.ucsd.edu/~scauligi/))
+Wed Oct 28 2020: Side channels (with [Sunjay](https://www.sysnet.ucsd.edu/~scauligi/) )
   - *Read*: [Efficient Cache Attacks on AES, and Countermeasures](papers/tromer:cache.pdf) by Eram Tromer et al.
   - *Optional*: [Chapter 19](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch19-7sep.pdf) of Security Engineering
 
