--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@ Wed Oct 21 2020: Sandboxing and isolation
 
 Thu Oct 22 2020: PA3: Sandboxing
 
-Mon Oct 26 2020: Bugfinding (with [Fraser](https://web.stanford.edu/~mlfbrown/) )
+Mon Oct 26 2020: Bugfinding 
+  - Co-instructor: [Fraser Brown](https://web.stanford.edu/~mlfbrown/)
   - *Read*: [A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World](papers/bessey:a-few.pdf) by Al Bessey et al.
 
-Wed Oct 28 2020: Side channels (with [Sunjay](https://www.sysnet.ucsd.edu/~scauligi/) )
+Wed Oct 28 2020: Side channels 
+  - Co-instructor: [Sunjay Cauligi](https://www.sysnet.ucsd.edu/~scauligi/)
   - *Read*: [Efficient Cache Attacks on AES, and Countermeasures](papers/tromer:cache.pdf) by Eram Tromer et al.
   - *Optional*: [Chapter 19](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch19-7sep.pdf) of Security Engineering
 
