--- a/index.html
+++ b/index.html
@@ -92,33 +92,33 @@ Mon Oct 19 2020: More memory (un)safety
   - *Read*: [Understanding glibc malloc](https://sploitfun.wordpress.com/2015/02/10/understanding-glibc-malloc/) by sploitfun
   - *Optional*: [Advanced Doug lea's malloc exploits](http://phrack.org/issues/61/6.html) by jp, [Automatic Techniques to Systematically Discover New Heap Exploitation Primitives](https://www.usenix.org/conference/usenixsecurity20/presentation/yun) by Insu Yun et al.
 
-Wed Oct 21 2020: Sandboxing and isolation
+Wed Oct 21 2020: Bugfinding 
+  - Co-instructor: [Fraser Brown](https://web.stanford.edu/~mlfbrown/)
+  - *Read*: [A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World](papers/bessey:a-few.pdf) by Al Bessey et al.
+
+
+Mon Oct 26 2020: Sandboxing and isolation
   - *Read*: [The Road to Less Trusted Code: Lowering the Barrier to In-process Sandboxing](https://cseweb.ucsd.edu/~dstefan/noindex/login2020/) by Garfinkel et al.
   - *Optional*: [Retrofitting Fine Grain Isolation in the Firefox Renderer](https://cseweb.ucsd.edu/~dstefan/pubs/narayan:2020:rlbox.pdf) by Narayan et al.
 
-Thu Oct 22 2020: PA3: Sandboxing
-
-Mon Oct 26 2020: Bugfinding 
-  - Co-instructor: [Fraser Brown](https://web.stanford.edu/~mlfbrown/)
-  - *Read*: [A Few Billion Lines of Code Later: Using Static Analysis to Find Bugs in the Real World](papers/bessey:a-few.pdf) by Al Bessey et al.
+Tue Oct 27 2020: PA3: Sandboxing
 
 Wed Oct 28 2020: Side channels 
   - Co-instructor: [Sunjay Cauligi](https://www.sysnet.ucsd.edu/~scauligi/)
   - *Read*: [Efficient Cache Attacks on AES, and Countermeasures](papers/tromer:cache.pdf) by Eram Tromer et al.
   - *Optional*: [Chapter 19](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch19-7sep.pdf) of Security Engineering
 
-Thu Oct 29 2020: PA4: Side channels
-
 Mon Nov  2 2020: Web intro
 
-Tue Nov  3 2020: Vote (if you can and haven't voted already)
+Tue Nov  3 2020: PA4: Side channels
+  - Vote (if you can and haven't voted already)
   - *Watch*: [USENIX Security 2020 Panel on Voting](https://www.usenix.org/conference/usenixsecurity20/presentation/panel-voting)
 
 Wed Nov  4 2020: Web attacks and defenses 
 
-Thu Nov  5 2020: PA5: Web
-
 Mon Nov  9 2020: Modern client-side web defenses
+
+Tue Nov 10 2020: PA5: Web
 
 Wed Nov 11 2020: Network intro
 
