--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ Wed Oct 21 2020: Bugfinding
 
 Mon Oct 26 2020: Sandboxing and isolation
   - [*Slides*](slides/7-isolation.pdf)
+  - [*Watch*](https://www.usenix.org/conference/usenixsecurity20/presentation/narayan)
   - *Read*: [The Road to Less Trusted Code: Lowering the Barrier to In-process Sandboxing](https://cseweb.ucsd.edu/~dstefan/noindex/login2020/) by Garfinkel et al.
   - *Optional*: [Retrofitting Fine Grain Isolation in the Firefox Renderer](https://cseweb.ucsd.edu/~dstefan/pubs/narayan:2020:rlbox.pdf) by Narayan et al.
 
