--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -103,7 +103,7 @@ Mon Oct 26 2020: Sandboxing and isolation
   - *Read*: [The Road to Less Trusted Code: Lowering the Barrier to In-process Sandboxing](https://cseweb.ucsd.edu/~dstefan/noindex/login2020/) by Garfinkel et al.
   - *Optional*: [Retrofitting Fine Grain Isolation in the Firefox Renderer](https://cseweb.ucsd.edu/~dstefan/pubs/narayan:2020:rlbox.pdf) by Narayan et al.
 
-Tue Oct 27 2020: PA3: [Library sandboxing](pa/pa3.html)
+Tue Oct 27 2020: [PA3: Library sandboxing](pa/pa3.html)
 
 Wed Oct 28 2020: Side channels 
   - Co-instructor: [Sunjay Cauligi](https://www.sysnet.ucsd.edu/~scauligi/)
