--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@ Mon Oct 26 2020: Sandboxing and isolation
 Tue Oct 27 2020: [PA3: Library sandboxing](pa/pa3.html)
 
 Wed Oct 28 2020: Side channels 
-  - Co-instructor: [Sunjay Cauligi](https://www.sysnet.ucsd.edu/~scauligi/)
+  - [*Slides*](slides/7-sidechannels.pdf)
   - *Read*: [Efficient Cache Attacks on AES, and Countermeasures](papers/tromer:cache.pdf) by Eram Tromer et al.
   - *Optional*: [Chapter 19](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch19-7sep.pdf) of Security Engineering
 
 Mon Nov  2 2020: Web intro
+  - *Read*: [CSRF, XSS, SQLi notes](https://cseweb.ucsd.edu/~dstefan/cse127-winter19/notes/lecture13/), php's [SQL Injection](https://www.php.net/manual/en/security.database.sql-injection.php)
 
 Tue Nov  3 2020: PA4: Side channels
   - Vote (if you can and haven't voted already)
