update pa3 -> pa4

--- a/cse127-fall20/pa/pa4.html
+++ b/cse127-fall20/pa/pa4.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
-# Assignment 3 *100pts*
+# Assignment 4 *100pts*
     **PA 4: Side channels (100 points)**
 
 **Early Turn-In: Monday, November 9, 2020 by 11:59:59 PM (10% bonus)**
@@ -20,12 +20,12 @@ academic integrity policy.
 ## Getting Started
 
 Just like previous assignments, for this assignment you will be provided with a
-VirtualBox VM containing all the files you need.  The VM is named `pa3box`, and
+VirtualBox VM containing all the files you need.  The VM is named `pa4box`, and
 you can download the VM image
-[**here**](https://drive.google.com/a/eng.ucsd.edu/uc?id=1q6foEy60Iex07_qyCJtQHDHwQ7VQXQWC&export=download).
-As in previous assignments, import the `pa3box.vbox` file into VirtualBox via
+[**here**](https://drive.google.com/file/d/1lMa0afTAMyCUjot_tYlwAKAxiFJP8WCU/view?usp=sharing).
+As in previous assignments, import the `pa4box.vbox` file into VirtualBox via
 the `Machine` &rarr; `Add` menu item; *don't* create a brand-new VirtualBox VM
-or import the `pa3box-data.vmdk` file on its own: If you do this, you won't
+or import the `pa4box-data.vmdk` file on its own: If you do this, you won't
 have the correct configuration.
 
 The VM is configured with two users: `student`, with password `hacktheplanet`;
