--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Wed Oct 28 2020: Side channels
   - *Optional*: [Chapter 19](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch19-7sep.pdf) of Security Engineering
 
 Mon Nov  2 2020: Web intro
+  - [*Slides*](slides/9-webmodel.pdf)
   - *Read*: [CSRF, XSS, SQLi notes](https://cseweb.ucsd.edu/~dstefan/cse127-winter19/notes/lecture13/), php's [SQL Injection](https://www.php.net/manual/en/security.database.sql-injection.php)
 
 Tue Nov  3 2020: PA4: Side channels
