--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Mon Nov  2 2020: Web intro
   - [*Slides*](slides/9-webmodel.pdf)
   - *Read*: [CSRF, XSS, SQLi notes](https://cseweb.ucsd.edu/~dstefan/cse127-winter19/notes/lecture13/), php's [SQL Injection](https://www.php.net/manual/en/security.database.sql-injection.php)
 
-Tue Nov  3 2020: PA4: Side channels
+Tue Nov  3 2020: [PA4: Side channels](pa/pa4.html)
   - Vote (if you can and haven't voted already)
   - *Watch*: [USENIX Security 2020 Panel on Voting](https://www.usenix.org/conference/usenixsecurity20/presentation/panel-voting)
 
