--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@ Tue Nov  3 2020: [PA4: Side channels](pa/pa4.html)
   - *Watch*: [USENIX Security 2020 Panel on Voting](https://www.usenix.org/conference/usenixsecurity20/presentation/panel-voting)
 
 Wed Nov  4 2020: Web attacks and defenses 
+  - [*Slides*](slides/10-webattacks.pdf)
+  - *Read*: [Robust defenses for cross-site request forgery](papers/csrf.pdf) by Adam Barth, Collin Jackson, and John C. Mitchell
 
 Mon Nov  9 2020: Modern client-side web defenses
 
