--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -123,12 +123,13 @@ Wed Nov  4 2020: Web attacks and defenses
   - *Read*: [Robust defenses for cross-site request forgery](papers/csrf.pdf) by Adam Barth, Collin Jackson, and John C. Mitchell
 
 Mon Nov  9 2020: Modern client-side web defenses
+  - [*Slides*](slides/11-webdefenses.pdf)
 
 Tue Nov 10 2020: PA5: Web
 
-Wed Nov 11 2020: Network intro
+Wed Nov 11 2020: No class
 
-Mon Nov 16 2020: No class
+Mon Nov 16 2020: Network intro
 
 Tue Nov 17 2020: PA6: Networking
 
