--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -125,7 +125,7 @@ Wed Nov  4 2020: Web attacks and defenses
 Mon Nov  9 2020: Modern client-side web defenses
   - [*Slides*](slides/11-webdefenses.pdf)
 
-Tue Nov 10 2020: PA5: Web
+Tue Nov 10 2020: [PA5: Web security](pa/pa5.html)
 
 Wed Nov 11 2020: No class
 
