--- a/cse127-fall20/pa/pa5.html
+++ b/cse127-fall20/pa/pa5.html
@@ -27,7 +27,7 @@ During the assignment, you may encounter situations that may require to either e
 
 Here are few resources which you may find helpful while solving the assignment. They are, in no particular order:
 
-1. [HTTP requet methods](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) 
+1. [HTTP request methods](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods) 
 2. [Python Requests library](https://requests.readthedocs.io/en/master/)
 3. [Handling Cookies on your browse](https://kb.iu.edu/d/ajfi)
 4. [JavaScript Guide](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide)
