--- a/index.html
+++ b/index.html
@@ -130,10 +130,13 @@ Tue Nov 10 2020: [PA5: Web security](pa/pa5.html)
 Wed Nov 11 2020: No class
 
 Mon Nov 16 2020: Network intro
+ - *Read*: [Security problems in the TCP/IP protocol suite](https://www.cs.columbia.edu/~smb/papers/ipext.pdf) by Steven Bellovin.  And [a look back](https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf) at this paper.
 
 Tue Nov 17 2020: PA6: Networking
 
 Wed Nov 18 2020: Network attacks
+ - *Read*: [Security problems in the TCP/IP protocol suite](https://www.cs.columbia.edu/~smb/papers/ipext.pdf) by Steven Bellovin.  And [a look back](https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf) at this paper.
+ - *Read*: [SAD DNS Explained](https://blog.cloudflare.com/sad-dns-explained/) by Marek Vavruša and Nick Sullivan
 
 Mon Nov 23 2020: Network defenses
 
