--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -130,6 +130,7 @@ Tue Nov 10 2020: [PA5: Web security](pa/pa5.html)
 Wed Nov 11 2020: No class
 
 Mon Nov 16 2020: Network intro
+ - [*Slides*](slides/12-networkintro.pdf)
  - *Read*: [Security problems in the TCP/IP protocol suite](https://www.cs.columbia.edu/~smb/papers/ipext.pdf) by Steven Bellovin.  And [a look back](https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf) at this paper.
 
 Tue Nov 17 2020: PA6: Networking
