Replaced with pa6.html

--- a/cse127-fall20/pa/pa6.html
+++ b/cse127-fall20/pa/pa6.html
@@ -1,10 +1,11 @@
-# Assignment 6 *100pts*
+<meta charset="utf-8"><!-- -*- markdown -*- -->
+    **PA 6:  Network security (100 pts)**
 
-**Deadline: Friday, November 27, 2020 by 11:59:59**
+**Deadline: Friday, November 27, 2020 by 23:59:59**
 
-**Early Turn-In: Wednesday, November 25, 2020 by 11:59:59 PM (10% bonus)**
+**Early Turn-In: Wednesday, November 25, 2020 by 23:59:59 PM (10% bonus)**
 
-## Introduction
+# Introduction
 
 A talented but, unfortunately, clumsy student in Deian's research group accidentally dropped a flash drive in the campus coffee shop.  You, an infamously nefarious hacker known far and wide as the archvillain of the research group, noticed this dropped flash drive, and quickly but surreptitiously pocketed it.  As usual, you're trying to do everything in your power to disrupt all of the activities of the research group. Your latest scheme requires you to get control of the account Deian uses to access campus networks, and you have a sneaking suspicion that this dropped flash drive might be just the foothold you need in order to set your scheme in motion.
 
@@ -12,7 +13,7 @@ Being a smart but cautious hacker, you connected the flash drive to a secure, is
 
 Unfortunately, a quick glance shows that there's not much of interest on this flash drive itself.  You were hoping it might have something juicy, like the plans for the research group's next super-potent virus.  But all is not lost.  You might still be able to use some of the information on this flash drive to breach into the research group's super-secret network.  And then who knows what information you might be able to find just by listening in to what's going on...
 
-## Logistics and Opening Hints
+# Logistics and Opening Hints
 
 You should have already received the "email to yourself" with the dump of the dropped flash drive's contents; the email's subject is "flash drive dump".  (If you don't immediately see it, you may need to check your spam folder.)  That should be all you need to get started - what interesting things might be here that would prove useful for your hacking activities?
 
@@ -34,3 +35,9 @@ We hope this assignment will be enjoyable and interesting for you.  In order to 
 Also, once you breach into the network, you should be able to find a `README.md` file in the victim's home directory with additional directions and hints for the next steps.
 
 Good luck in your hacking!
+
+<style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="../markdeep.min.js"></script>
+<script>
+  window.alreadyProcessedMarkdeep || (document.body.style.visibility="visible");
+  markdeepOptions= {tocStyle: 'long', sortScheduleLists: false };
+</script>
