--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Mon Nov 16 2020: Network intro
  - [*Slides*](slides/12-networkintro.pdf)
  - *Read*: [Security problems in the TCP/IP protocol suite](https://www.cs.columbia.edu/~smb/papers/ipext.pdf) by Steven Bellovin.  And [a look back](https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf) at this paper.
 
-Tue Nov 17 2020: PA6: Networking
+Tue Nov 17 2020: [PA6: Networking](pa/pa6.html)
 
 Wed Nov 18 2020: Network attacks
  - *Read*: [Security problems in the TCP/IP protocol suite](https://www.cs.columbia.edu/~smb/papers/ipext.pdf) by Steven Bellovin.  And [a look back](https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf) at this paper.
