--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -141,6 +141,8 @@ Wed Nov 18 2020: Network attacks
  - *Read*: [SAD DNS Explained](https://blog.cloudflare.com/sad-dns-explained/) by Marek Vavruša and Nick Sullivan
 
 Mon Nov 23 2020: Network defenses
+ - [*Slides*](slides/14-networkdefenses.pdf)
+ - *Read*: [NAT Slipstreaming](https://samy.pl/slipstream/) by Samy Kamkar
 
 Wed Nov 25 2020: Symmetric-key crypto
   - *Read*: [Chapter 5](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch5-7sep.pdf) (skip 5.2.3, 5.2.5, 5.3.4, 5.3.5, 5.4, 5.7, 5.8) of Security Engineering
