Added decode for bleichenbacher

--- a/cse127-fall20/pa/pa7.html
+++ b/cse127-fall20/pa/pa7.html
@@ -502,7 +502,7 @@ message = sys.argv[1]
 
 # some example functions from roots
 root, is_exact = integer_nthroot(27, 3)
-print(integer_to_base64(root))
+print(integer_to_base64(root).decode())
 ```
 
 ## 5. Writeup
